--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "sqlsugar",
   "description": "edit inline sql literal in multi language with sqls lsp support",
   "version": "0.0.1",
-  "publisher": "localsqlsugar",
+  "publisher": "l8ng",
   "engines": {
     "vscode": "^1.98.0"
   },
@@ -78,8 +78,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://example.com/placeholder/sqlsugar.git"
+    "url": "https://github.com/StrayDragon/sqlsugar"
   },
+  "icon": "icon.png",
   "devDependencies": {
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
