fix: 一些python内嵌sql时前面的indent应该能还原, 避免不必要的破坏

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "test": "vscode-test"
+    "test": "vscode-test --timeout=600000"
   },
   "dependencies": {
     "vscode-languageclient": "^9.0.1"
