--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
       {
         "command": "sqlsugar.editInlineSQL",
         "title": "Edit Inline SQL"
+      },
+      {
+        "command": "sqlsugar.switchConnection",
+        "title": "Switch Database Connection"
       }
     ],
     "menus": {
@@ -27,6 +31,11 @@
           "command": "sqlsugar.editInlineSQL",
           "when": "editorHasSelection",
           "group": "1_modification"
+        }
+      ],
+      "commandPalette": [
+        {
+          "command": "sqlsugar.switchConnection"
         }
       ]
     },
@@ -74,7 +83,8 @@
     "test": "vscode-test --timeout=600000"
   },
   "dependencies": {
-    "vscode-languageclient": "^9.0.1"
+    "vscode-languageclient": "^9.0.1",
+    "js-yaml": "^4.1.0"
   },
   "repository": {
     "type": "git",
@@ -82,6 +92,7 @@
   },
   "icon": "icon.png",
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.98.0",
