--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,16 +6,16 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "Run Extension",
-			"type": "extensionHost",
-			"request": "launch",
 			"args": [
-				"--extensionDevelopmentPath=${workspaceFolder}"
+				"--extensionDevelopmentPath=${workspaceFolder}",
+				"--enable-proposed-api=l8ng.sqlsugar"
 			],
+			"name": "Run Extension",
 			"outFiles": [
-				"${workspaceFolder}/dist/**/*.js"
+				"${workspaceFolder}/out/**/*.js"
 			],
-			"preLaunchTask": "${defaultBuildTask}"
-		}
+			"request": "launch",
+			"type": "extensionHost"
+		},
 	]
 }
