--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
     "explorer.excludeGitIgnore": true,
-
     "files.exclude": {
         "out": false, // set this to true to hide the "out" folder with the compiled JS files
-        "dist": false // set this to true to hide the "dist" folder with the compiled JS files
+        "dist": false, // set this to true to hide the "dist" folder with the compiled JS files
+        "**/*.d.ts.map": true,
     },
     "search.exclude": {
         "out": true, // set this to false to include "out" folder in search results
@@ -11,19 +11,26 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off",
-
     // SQLSugar test settings
     "sqlsugar.sqlsConfigPath": "${workspaceFolder}/docker/sqls-config.yml",
-
     "sqlsugar.tempFileCleanup": true,
-
     // SQLFluff configuration
     "sqlfluff.dialect": "mysql",
     "sqlfluff.format.enabled": true,
     "sqlfluff.linter.run": "onSave",
     "sqlfluff.linter.diagnosticSeverity": "warning",
-    "sqlfluff.format.arguments": ["--FIX-EVEN-UNPARSABLE"],
-    "sqlfluff.excludeRules": ["L009", "L016", "L006", "L039", "L057", "RF02", "LT12"],
+    "sqlfluff.format.arguments": [
+        "--FIX-EVEN-UNPARSABLE"
+    ],
+    "sqlfluff.excludeRules": [
+        "L009",
+        "L016",
+        "L006",
+        "L039",
+        "L057",
+        "RF02",
+        "LT12"
+    ],
     "sqlfluff.workingDirectory": "${workspaceFolder}",
     "sqlfluff.config": "${workspaceFolder}/.sqlfluff",
     "editor.formatOnSave": false
