tmp: aggressive modified for more clean

--- a/package.json
+++ b/package.json
@@ -206,13 +206,15 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "vscode:prepublish": "pnpm run package",
-    "compile": "pnpm run check-types && pnpm run lint && pnpm run build:declarations && node esbuild.js",
-    "package": "pnpm run check-types && pnpm run lint && pnpm run build:declarations && node esbuild.js --production",
+    "compile": "pnpm run lint && node esbuild.js",
+    "package": "pnpm run lint && node esbuild.js --production",
     "build:declarations": "tsc --declaration --emitDeclarationOnly --project tsconfig.declarations.json",
     "vsix": "pnpm run package && vsce package --no-yarn --no-dependencies --out sqlsugar.vsix",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
-    "lint:main": "eslint src/**/*.ts"
+    "lint:fix": "eslint src --fix",
+    "clean": "rm -rf dist/ out/ *.vsix",
+    "build": "pnpm run compile"
   },
   "dependencies": {
     "@lit/context": "^1.1.6",
