--- a/tsconfig.components.json
+++ b/tsconfig.components.json
@@ -7,7 +7,10 @@
     "emitDeclarationOnly": true,
     "composite": true,
     "skipLibCheck": true,
-    "noEmit": false
+    "noEmit": false,
+    "useDefineForClassFields": true,
+    "experimentalDecorators": false,
+    "emitDecoratorMetadata": false
   },
   "include": [
     "src/jinja2-editor/**/*.ts"
